[package]
name = "owo-code"
version = "0.1.1"
authors = ["Daniel Conley <danielc030417@gmail.com>"]
# Do What the Fuck You want to Public License. 
license = "WTFPL"
# OwO Code! Program in your native language!
description = "OwO Code owo! pwogwam owo in ur nyative wanguage owo!"
repository = "https://github.com/danii/owo-code.git"
edition = "2018"

[lib]
proc-macro = true
